--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -138,6 +138,7 @@
   <string name="oops_something_went_wrong">Oops! Something went wrong</string>
   <string name="retry">retry</string>
   <string name="search_description">Try searching for people, topics or keywords</string>
+  <string name="find_result">Find all results for \"%s\"</string>
   <plurals name="search_preview_user">
     <item quantity="one">%d user</item>
     <item quantity="other">%d users</item>
@@ -146,6 +147,11 @@
     <item quantity="one">%d topic</item>
     <item quantity="other">%d topics</item>
   </plurals>
+  <string name="nothing_to_see_here">There\'s nothing here</string>
+
+  <!-- Search screen -->
+  <string name="accounts_title">Accounts</string>
+  <string name="hashtags_title">Hashtags</string>
 
   <!--  Post screen-->
   <string name="public_title">Public</string>
