--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -188,6 +188,7 @@
   <string name="duration_3_days">3 days</string>
   <string name="duration_7_days">1 week</string>
   <string name="poll_close_time">Voting will close in %s</string>
+  <string name="new_moment">New moment</string>
 
   <string name="ok_title">OK</string>
 </resources>
