feat: implementation follow account, redesign fields

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,7 +90,9 @@
   <string name="post_title">Posts</string>
   <string name="post_count">%s Posts</string>
   <string name="follow_title">Follow</string>
-  <string name="unfollow_title">Unfollow</string>
+  <string name="follow_pending_title">Pending</string>
+  <string name="subscribe_title">Subscribe</string>
+  <string name="unsubscribe_title">Subscribe</string>
   <string name="following_title">Following</string>
   <string name="follower_title">Followers</string>
   <string name="reply_title">Replies</string>
