--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -87,7 +87,9 @@
   <string name="post_title">嘟文</string>
   <string name="post_count">%s 条嘟文</string>
   <string name="follow_title">关注</string>
-  <string name="unfollow_title">取消关注</string>
+  <string name="follow_pending_title">等待请求</string>
+  <string name="subscribe_title">订阅通知</string>
+  <string name="unsubscribe_title">取消订阅</string>
   <string name="following_title">正在关注</string>
   <string name="follower_title">关注者</string>
   <string name="reply_title">回复</string>
