--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -206,4 +206,6 @@
   <string name="new_moment">New moment</string>
 
   <string name="ok_title">OK</string>
+  <!-- notification screen -->
+  <string name="notification_title">Notification</string>
 </resources>
