--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -47,7 +47,7 @@
   <string name="link_copied">嘟文链接已复制到剪贴板</string>
   <string name="bookmarked_snackBar">已收藏到你的书签</string>
   <string name="load_post_error">加载嘟文时发生错误</string>
-  <string name="click_to_display_content">单击以显示内容</string>
+  <string name="click_to_display_content">Click to display content</string>
   <string name="copy_text">复制文本内容</string>
   <string name="copy_link">复制嘟文链接</string>
   <string name="bookmark">添加到书签</string>
@@ -184,6 +184,4 @@
   <string name="poll_close_time">投票将会在 %s后结束</string>
   <string name="new_moment">发布新鲜事</string>
   <string name="ok_title">好的</string>
-  <!-- notification screen -->
-  <string name="notification_title">通知</string>
 </resources>
