--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -206,4 +206,10 @@
   <string name="new_moment">New moment</string>
 
   <string name="ok_title">OK</string>
+
+  <!-- Notification screen -->
+  <string name="notifications_title">Notifications</string>
+  <string name="someone_liked_your_post">%s liked your post</string>
+  <string name="someone_boosted_your_post">%s boosted your post</string>
+  <string name="someone_mentioned_you">%s mentioned you in a post</string>
 </resources>
