--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,19 +106,6 @@
   <string name="empty_timeline">"You haven’t followed anyone else yet"</string>
   <string name="searching_account">Searching account…</string>
 
-  <!--These are for timestamps on posts. For example: "16s" or "2d"-->
-  <string name="status_created_at_now">now</string>
-  <string name="abbreviated_in_years">in %dy</string>
-  <string name="abbreviated_in_days">in %dd</string>
-  <string name="abbreviated_in_hours">in %dh</string>
-  <string name="abbreviated_in_minutes">in %dm</string>
-  <string name="abbreviated_in_seconds">in %ds</string>
-  <string name="abbreviated_years_ago">%dy</string>
-  <string name="abbreviated_days_ago">%dd</string>
-  <string name="abbreviated_hours_ago">%dh</string>
-  <string name="abbreviated_minutes_ago">%dm</string>
-  <string name="abbreviated_seconds_ago">%ds</string>
-
   <string name="vote_poll_day">Vote ends in %d days</string>
   <string name="vote_poll_hours">Vote ends in %d hours</string>
   <string name="vote_poll_minutes">Vote ends in %d minutes</string>
@@ -206,4 +193,15 @@
   <string name="new_moment">New moment</string>
 
   <string name="ok_title">OK</string>
+
+  <!-- Notification screen -->
+  <string name="notifications_title">Notifications</string>
+  <string name="someone_liked_your_post">%s liked your post</string>
+  <string name="someone_boosted_your_post">%s boosted your post</string>
+  <string name="someone_mentioned_you">%s mentioned you in a post</string>
+  <string name="someone_followed_you">%s is now following you</string>
+  <string name="someone_request_follow_you">%s has requested to follow you</string>
+  <string name="someone_share_new_post">%s shared a new post</string>
+  <string name="someone_update_post">%s has updated a post</string>
+  <string name="someone_poll_end">%s\'s poll has ended</string>
 </resources>
