--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -18,50 +18,50 @@
 <resources>
   <!-- login screen -->
   <string name="app_name">Mastify</string>
-  <string name="app_description">A feature-rich Mastodon Android client</string>
-  <string name="instance_address_tip">e.g. mastodon.social</string>
-  <string name="log_in_title">Login</string>
-  <string name="log_in_to">Log in to %s</string>
-  <string name="failed_to_retrieve_instance">Failed to retrieve instance information</string>
-  <string name="instance_verification_error">Error occurred during instance verification</string>
+  <string name="app_description">Ein funktionsreicher Mastodon Android Client</string>
+  <string name="instance_address_tip">z.B. mastodon.social</string>
+  <string name="log_in_title">Anmelden</string>
+  <string name="log_in_to">Bei %s anmelden</string>
+  <string name="failed_to_retrieve_instance">Fehler beim Abrufen der Instanzinformationen</string>
+  <string name="instance_verification_error">Fehler bei der Verifizierung der Instanz</string>
   <!-- oauth screen -->
-  <string name="title_connecting">Connecting…</string>
-  <string name="error_invalid_domain">Invalid domain entered</string>
+  <string name="title_connecting">Verbinde…</string>
+  <string name="error_invalid_domain">Ungültige Domain eingegeben</string>
   <!-- home screen -->
-  <string name="home_title">Home</string>
-  <string name="user_boosted">%s boosted</string>
-  <string name="title_add_account">Add Account</string>
-  <string name="title_profile">Profile</string>
-  <string name="title_bookmarks">Bookmarks</string>
-  <string name="title_favorites">Favorites</string>
-  <string name="title_lists">Lists</string>
-  <string name="title_draft">Drafts</string>
-  <string name="title_settings">Settings</string>
-  <string name="title_about_mastify">About Mastify</string>
-  <string name="title_logout">Log out</string>
-  <string name="sensitive_content">Sensitive Content</string>
-  <string name="reply_a_post">replied a post</string>
-  <string name="started_a_discussion_thread">Started a discussion thread</string>
-  <string name="show_more_replies">Show more replies</string>
-  <string name="text_copied">Text copied to clipboard</string>
-  <string name="link_copied">Post link copied to clipboard</string>
-  <string name="bookmarked_snackBar">Saved to your bookmarks</string>
-  <string name="load_post_error">An error occurred while loading post</string>
-  <string name="click_to_display_content">Click to display content</string>
-  <string name="copy_text">Copy Text</string>
-  <string name="copy_link">Copy Link</string>
-  <string name="bookmark">Bookmark</string>
-  <string name="delete_bookmark">Delete Bookmark</string>
-  <string name="mute_account">Mute %s</string>
-  <string name="block_account">Block %s</string>
-  <string name="report">Report</string>
-  <string name="many_posts_title">Many posts</string>
+  <string name="home_title">Startseite</string>
+  <string name="user_boosted">%s geboostet</string>
+  <string name="title_add_account">Benutzerkonto hinzufügen</string>
+  <string name="title_profile">Profil</string>
+  <string name="title_bookmarks">Lesezeichen</string>
+  <string name="title_favorites">Favoriten</string>
+  <string name="title_lists">Listen</string>
+  <string name="title_draft">Entwürfe</string>
+  <string name="title_settings">Einstellungen</string>
+  <string name="title_about_mastify">Über Mastify</string>
+  <string name="title_logout">Abmelden</string>
+  <string name="sensitive_content">Sensibler Inhalt</string>
+  <string name="reply_a_post">antwortete auf einen Beitrag</string>
+  <string name="started_a_discussion_thread">Diskussionsbeitrag gestartet</string>
+  <string name="show_more_replies">Weitere Antworten anzeigen</string>
+  <string name="text_copied">Text in die Zwischenablage kopiert</string>
+  <string name="link_copied">Beitrags Link in die Zwischenablage kopiert</string>
+  <string name="bookmarked_snackBar">Zu Favoriten hinzugefügt</string>
+  <string name="load_post_error">Beim Laden des Beitrags ist ein Fehler aufgetreten</string>
+  <string name="click_to_display_content">Klicken um Inhalt anzuzeigen</string>
+  <string name="copy_text">Text kopieren</string>
+  <string name="copy_link">Link kopieren</string>
+  <string name="bookmark">Lesezeichen</string>
+  <string name="delete_bookmark">Lesezeichen löschen</string>
+  <string name="mute_account">%s stummschalten</string>
+  <string name="block_account">%s blockieren</string>
+  <string name="report">Melden</string>
+  <string name="many_posts_title">Viele Beiträge</string>
   <plurals name="new_post">
-    <item quantity="one">%d new post</item>
+    <item quantity="one">%d neuer Beitrag</item>
     <item quantity="other">%d new posts</item>
   </plurals>
-  <string name="load_more_title">Load More</string>
-  <string name="link_preview_title">Link Preview</string>
+  <string name="load_more_title">Mehr laden</string>
+  <string name="link_preview_title">Link Vorschau</string>
   <string name="replying_to_title">Replying to %s</string>
   <!-- status detail screen -->
   <string name="post_your_reply">post your reply</string>
@@ -99,18 +99,6 @@
   <string name="empty_status_self">You haven’t posted yet</string>
   <string name="empty_timeline">"You haven’t followed anyone else yet"</string>
   <string name="searching_account">Searching account…</string>
-  <!--These are for timestamps on posts. For example: "16s" or "2d"-->
-  <string name="status_created_at_now">now</string>
-  <string name="abbreviated_in_years">in %dy</string>
-  <string name="abbreviated_in_days">in %dd</string>
-  <string name="abbreviated_in_hours">in %dh</string>
-  <string name="abbreviated_in_minutes">in %dm</string>
-  <string name="abbreviated_in_seconds">in %ds</string>
-  <string name="abbreviated_years_ago">%dy</string>
-  <string name="abbreviated_days_ago">%dd</string>
-  <string name="abbreviated_hours_ago">%dh</string>
-  <string name="abbreviated_minutes_ago">%dm</string>
-  <string name="abbreviated_seconds_ago">%ds</string>
   <string name="vote_poll_day">Vote ends in %d days</string>
   <string name="vote_poll_hours">Vote ends in %d hours</string>
   <string name="vote_poll_minutes">Vote ends in %d minutes</string>
@@ -194,4 +182,14 @@
   <string name="poll_close_time">Voting will close in %s</string>
   <string name="new_moment">New moment</string>
   <string name="ok_title">OK</string>
+  <!-- Notification screen -->
+  <string name="notifications_title">Notifications</string>
+  <string name="someone_liked_your_post">%s liked your post</string>
+  <string name="someone_boosted_your_post">%s boosted your post</string>
+  <string name="someone_mentioned_you">%s mentioned you in a post</string>
+  <string name="someone_followed_you">%s is now following you</string>
+  <string name="someone_request_follow_you">%s has requested to follow you</string>
+  <string name="someone_share_new_post">%s shared a new post</string>
+  <string name="someone_update_post">%s has updated a post</string>
+  <string name="someone_poll_end">%s\'s poll has ended</string>
 </resources>
