--- a/app/src/main/res/values-kab-rKAB/strings.xml
+++ b/app/src/main/res/values-kab-rKAB/strings.xml
@@ -17,28 +17,28 @@
   -->
 <resources>
   <!-- login screen -->
-  <string name="app_name">TEST</string>
+  <string name="app_name">Mastify</string>
   <string name="app_description">A feature-rich Mastodon Android client</string>
-  <string name="instance_address_tip">e.g. mastodon.social</string>
+  <string name="instance_address_tip">Amedya mastodon.social</string>
   <string name="log_in_title">Login</string>
-  <string name="log_in_to">Log in to %s</string>
+  <string name="log_in_to">Tuqqna ɣer %s</string>
   <string name="failed_to_retrieve_instance">Failed to retrieve instance information</string>
   <string name="instance_verification_error">Error occurred during instance verification</string>
   <!-- oauth screen -->
-  <string name="title_connecting">Connecting…</string>
+  <string name="title_connecting">Itteqqen…</string>
   <string name="error_invalid_domain">Invalid domain entered</string>
   <!-- home screen -->
-  <string name="home_title">Home</string>
+  <string name="home_title">Agejdan</string>
   <string name="user_boosted">%s boosted</string>
-  <string name="title_add_account">Add Account</string>
-  <string name="title_profile">Profile</string>
-  <string name="title_bookmarks">Bookmarks</string>
+  <string name="title_add_account">Rnu amiḍan</string>
+  <string name="title_profile">Amaɣnu</string>
+  <string name="title_bookmarks">Ticraḍ</string>
   <string name="title_favorites">Favorites</string>
   <string name="title_lists">Lists</string>
-  <string name="title_draft">Drafts</string>
-  <string name="title_settings">Settings</string>
-  <string name="title_about_mastify">About Mastify</string>
-  <string name="title_logout">Log out</string>
+  <string name="title_draft">Irewwayen</string>
+  <string name="title_settings">Iɣewwaren</string>
+  <string name="title_about_mastify">Ɣef Mastify</string>
+  <string name="title_logout">Ffeɣ</string>
   <string name="sensitive_content">Sensitive Content</string>
   <string name="reply_a_post">replied a post</string>
   <string name="started_a_discussion_thread">Started a discussion thread</string>
@@ -48,15 +48,16 @@
   <string name="bookmarked_snackBar">Saved to your bookmarks</string>
   <string name="load_post_error">An error occurred while loading post</string>
   <string name="click_to_display_content">Click to display content</string>
-  <string name="copy_text">Copy Text</string>
-  <string name="copy_link">Copy Link</string>
+  <string name="copy_text">Nɣel aḍris</string>
+  <string name="copy_link">Nɣel asaɣ</string>
   <string name="bookmark">Bookmark</string>
   <string name="delete_bookmark">Delete Bookmark</string>
-  <string name="mute_account">Mute %s</string>
-  <string name="block_account">Block %s</string>
+  <string name="mute_account">Sgugem %s</string>
+  <string name="block_account">Sewḥel %s</string>
   <string name="report">Report</string>
   <string name="many_posts_title">Many posts</string>
   <plurals name="new_post">
+    <item quantity="one">%d new post</item>
     <item quantity="other">%d new posts</item>
   </plurals>
   <string name="load_more_title">Load More</string>
@@ -71,15 +72,18 @@
   <string name="reply_three_user">%s, %s and %s</string>
   <string name="reply_more_user">%s, %s and %d other users</string>
   <plurals name="favs">
+    <item quantity="one">%d Favorite</item>
     <item quantity="other">%d Favorites</item>
   </plurals>
   <plurals name="reblogs">
+    <item quantity="one">%d Boost</item>
     <item quantity="other">%d Boosts</item>
   </plurals>
   <!--  profile screen-->
   <string name="account_joined">Joined %s</string>
   <string name="post_title">Posts</string>
   <plurals name="post_count">
+    <item quantity="one">%d Post</item>
     <item quantity="other">%d Posts</item>
   </plurals>
   <string name="follow_title">Follow</string>
@@ -105,6 +109,7 @@
   <string name="vote_title">Vote</string>
   <string name="vote_failed_title">Vote Failed: %s</string>
   <plurals name="votes">
+    <item quantity="one">%d vote</item>
     <item quantity="other">%d votes</item>
   </plurals>
   <!-- Explore screen -->
@@ -120,9 +125,11 @@
   <string name="search_description">Try searching for people, topics or keywords</string>
   <string name="find_result">Find all results for \"%s\"</string>
   <plurals name="search_preview_user">
+    <item quantity="one">%d user</item>
     <item quantity="other">%d users</item>
   </plurals>
   <plurals name="search_preview_tags">
+    <item quantity="one">%d topic</item>
     <item quantity="other">%d topics</item>
   </plurals>
   <string name="nothing_to_see_here">There’s nothing here</string>
@@ -132,12 +139,15 @@
   <string name="follow_hashtag">Follow \#%s</string>
   <string name="following_hashtag">Following \#%s</string>
   <plurals name="participant_count">
+    <item quantity="one">%d participant</item>
     <item quantity="other">%d participants</item>
   </plurals>
   <plurals name="posts_week">
+    <item quantity="one">%d post this week</item>
     <item quantity="other">%d posts this week</item>
   </plurals>
   <plurals name="posts_today">
+    <item quantity="one">%d post today</item>
     <item quantity="other">%d posts today</item>
   </plurals>
   <string name="back_to_top">Back to top</string>
