--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -18,178 +18,180 @@
 <resources>
   <!-- login screen -->
   <string name="app_name">Mastify</string>
-  <string name="app_description">A feature-rich Mastodon Android client</string>
-  <string name="instance_address_tip">e.g. mastodon.social</string>
-  <string name="log_in_title">Login</string>
-  <string name="log_in_to">Log in to %s</string>
-  <string name="failed_to_retrieve_instance">Failed to retrieve instance information</string>
-  <string name="instance_verification_error">Error occurred during instance verification</string>
+  <string name="app_description">Un client Mastodon Android riche en fonctionnalités</string>
+  <string name="instance_address_tip">ex: mastodon.social</string>
+  <string name="log_in_title">Se connecter</string>
+  <string name="log_in_to">Connexion à %s</string>
+  <string name="failed_to_retrieve_instance">Échec de récupération des informations de l\'instance</string>
+  <string name="instance_verification_error">Une erreur s\'est produite lors de la vérification de l\'instance</string>
   <!-- oauth screen -->
-  <string name="title_connecting">Connecting…</string>
-  <string name="error_invalid_domain">Invalid domain entered</string>
+  <string name="title_connecting">Connexion…</string>
+  <string name="error_invalid_domain">Domaine saisi invalide</string>
   <!-- home screen -->
-  <string name="home_title">Home</string>
-  <string name="user_boosted">%s boosted</string>
-  <string name="title_add_account">Add Account</string>
-  <string name="title_profile">Profile</string>
-  <string name="title_bookmarks">Bookmarks</string>
-  <string name="title_favorites">Favorites</string>
-  <string name="title_lists">Lists</string>
-  <string name="title_draft">Drafts</string>
-  <string name="title_settings">Settings</string>
-  <string name="title_about_mastify">About Mastify</string>
-  <string name="title_logout">Log out</string>
-  <string name="sensitive_content">Sensitive Content</string>
-  <string name="reply_a_post">replied a post</string>
-  <string name="started_a_discussion_thread">Started a discussion thread</string>
-  <string name="show_more_replies">Show more replies</string>
-  <string name="text_copied">Text copied to clipboard</string>
-  <string name="link_copied">Post link copied to clipboard</string>
-  <string name="bookmarked_snackBar">Saved to your bookmarks</string>
-  <string name="load_post_error">An error occurred while loading post</string>
-  <string name="click_to_display_content">Click to display content</string>
-  <string name="copy_text">Copy Text</string>
-  <string name="copy_link">Copy Link</string>
-  <string name="bookmark">Bookmark</string>
-  <string name="delete_bookmark">Delete Bookmark</string>
-  <string name="mute_account">Mute %s</string>
-  <string name="block_account">Block %s</string>
-  <string name="report">Report</string>
-  <string name="many_posts_title">Many posts</string>
+  <string name="home_title">Accueil</string>
+  <string name="user_boosted">%s boosté</string>
+  <string name="title_add_account">Ajouter un Compte</string>
+  <string name="title_profile">Profil</string>
+  <string name="title_bookmarks">Marque-pages</string>
+  <string name="title_favorites">Favoris</string>
+  <string name="title_lists">Listes</string>
+  <string name="title_draft">Brouillons</string>
+  <string name="title_settings">Paramètres</string>
+  <string name="title_about_mastify">À propos de Mastify</string>
+  <string name="title_logout">Se déconnecter</string>
+  <string name="sensitive_content">Contenu Sensible</string>
+  <string name="reply_a_post">a répondu au poste</string>
+  <string name="started_a_discussion_thread">A commencé une discussion</string>
+  <string name="show_more_replies">Voir plus de réponses</string>
+  <string name="text_copied">Texte copié dans le presse-papier</string>
+  <string name="link_copied">Lien de post copié dans le presse-papiers</string>
+  <string name="bookmarked_snackBar">Enregistré dans vos marque-pages</string>
+  <string name="load_post_error">Une erreur est survenue lors du chargement du post</string>
+  <string name="click_to_display_content">Cliquez pour afficher le contenu</string>
+  <string name="copy_text">Copier le Texte</string>
+  <string name="copy_link">Copier le Lien</string>
+  <string name="bookmark">Marque-page</string>
+  <string name="delete_bookmark">Supprimer le marque-page</string>
+  <string name="mute_account">Masquer %s</string>
+  <string name="block_account">Bloquer %s</string>
+  <string name="report">Signaler</string>
+  <string name="many_posts_title">Plusieurs postes</string>
   <plurals name="new_post">
-    <item quantity="one">%d new post</item>
-    <item quantity="other">%d new posts</item>
+    <item quantity="one">%d nouveau post</item>
+    <item quantity="other">%d nouveaux postes</item>
   </plurals>
-  <string name="load_more_title">Load More</string>
-  <string name="link_preview_title">Link Preview</string>
-  <string name="replying_to_title">Replying to %s</string>
+  <string name="load_more_title">Afficher Plus</string>
+  <string name="link_preview_title">Aperçu du Lien</string>
+  <string name="replying_to_title">Répondre à %s</string>
   <!-- status detail screen -->
-  <string name="post_your_reply">post your reply</string>
-  <string name="uncategorized_title">Uncategorized</string>
-  <string name="pick_users_title">Pick Users</string>
-  <string name="pick_users_description">You can choose who you want to be notified of replies in this thread</string>
+  <string name="post_your_reply">poster votre réponse</string>
+  <string name="uncategorized_title">Sans catégorie</string>
+  <string name="pick_users_title">Choisir des utilisateurs</string>
+  <string name="pick_users_description">Vous pouvez choisir qui vous voulez être notifié des réponses dans ce fil de discussion</string>
   <string name="reply_two_user">%s, %s</string>
-  <string name="reply_three_user">%s, %s and %s</string>
-  <string name="reply_more_user">%s, %s and %d other users</string>
+  <string name="reply_three_user">%s, %s et %s</string>
+  <string name="reply_more_user">%s, %s et %d autres utilisateurs</string>
   <plurals name="favs">
-    <item quantity="one">%d Favorite</item>
-    <item quantity="other">%d Favorites</item>
+    <item quantity="one">%d Favoris</item>
+    <item quantity="other">%d Favoris</item>
   </plurals>
   <plurals name="reblogs">
     <item quantity="one">%d Boost</item>
     <item quantity="other">%d Boosts</item>
   </plurals>
   <!--  profile screen-->
-  <string name="account_joined">Joined %s</string>
+  <string name="account_joined">Inscrit %s</string>
   <string name="post_title">Posts</string>
   <plurals name="post_count">
     <item quantity="one">%d Post</item>
     <item quantity="other">%d Posts</item>
   </plurals>
-  <string name="follow_title">Follow</string>
-  <string name="follow_pending_title">Pending</string>
-  <string name="subscribe_title">Subscribe</string>
-  <string name="unsubscribe_title">Unsubscribe</string>
-  <string name="following_title">Following</string>
+  <string name="follow_title">Suivre</string>
+  <string name="follow_pending_title">En attente</string>
+  <string name="subscribe_title">S\'abonner</string>
+  <string name="unsubscribe_title">Se désabonner</string>
+  <string name="following_title">Suivi</string>
   <string name="follower_title">Followers</string>
-  <string name="reply_title">Replies</string>
-  <string name="media_title">Media</string>
-  <string name="edit_profile">Edit Profile</string>
-  <string name="empty_status">This guy hasn’t yet made a post</string>
-  <string name="empty_status_self">You haven’t posted yet</string>
-  <string name="empty_timeline">"You haven’t followed anyone else yet"</string>
-  <string name="searching_account">Searching account…</string>
-  <string name="vote_poll_day">Vote ends in %d days</string>
-  <string name="vote_poll_hours">Vote ends in %d hours</string>
-  <string name="vote_poll_minutes">Vote ends in %d minutes</string>
-  <string name="vote_poll_soon_ending">Voting is about to end</string>
-  <string name="vote_poll_expired">Voting has ended</string>
-  <string name="vote_no_deadline">No voting deadline</string>
-  <string name="vote_poll_participants_count">%d voted</string>
+  <string name="reply_title">Réponses</string>
+  <string name="media_title">Média</string>
+  <string name="edit_profile">Modifier le Profil</string>
+  <string name="empty_status">Cette personne n\'a pas encore fait de post</string>
+  <string name="empty_status_self">Vous n’avez pas encore posté</string>
+  <string name="empty_timeline">"Vous n'avez encore suivi personne"</string>
+  <string name="searching_account">Recherche du compte…</string>
+  <string name="vote_poll_day">Le vote se termine dans %d jours</string>
+  <string name="vote_poll_hours">Le vote se termine dans %d heures</string>
+  <string name="vote_poll_minutes">Le vote se termine dans %d minutes</string>
+  <string name="vote_poll_soon_ending">Le vote touche à sa fin</string>
+  <string name="vote_poll_expired">Le vote est terminé</string>
+  <string name="vote_no_deadline">Aucune date limite de vote</string>
+  <string name="vote_poll_participants_count">%d voix</string>
   <string name="vote_title">Vote</string>
-  <string name="vote_failed_title">Vote Failed: %s</string>
+  <string name="vote_failed_title">Échec du vote : %s</string>
   <plurals name="votes">
     <item quantity="one">%d vote</item>
     <item quantity="other">%d votes</item>
   </plurals>
   <!-- Explore screen -->
-  <string name="explore_instance">Explore %s</string>
-  <string name="trending_title">Trending</string>
-  <string name="public_timeline">Public Timeline</string>
-  <string name="news_title">News</string>
-  <string name="search_title">Search</string>
-  <string name="timeline_is_empty">There are no posts here yet</string>
-  <string name="news_is_empty">There is no news about this instance yet</string>
-  <string name="oops_something_went_wrong">Oops! Something went wrong</string>
-  <string name="retry">retry</string>
-  <string name="search_description">Try searching for people, topics or keywords</string>
-  <string name="find_result">Find all results for \"%s\"</string>
+  <string name="explore_instance">Explorer %s</string>
+  <string name="trending_title">Tendances</string>
+  <string name="public_timeline">Timeline publique</string>
+  <string name="news_title">Actualités</string>
+  <string name="search_title">Recherche</string>
+  <string name="timeline_is_empty">Il n\'y a pas encore de posts ici</string>
+  <string name="news_is_empty">Il n\'y a pas encore d\'actualités sur cette instance</string>
+  <string name="oops_something_went_wrong">Oups ! Une erreur est survenue</string>
+  <string name="retry">réessayer</string>
+  <string name="search_description">Essayez de rechercher des personnes, sujets ou mots-clés</string>
+  <string name="find_result">Trouver tous les résultats pour \"%s\"</string>
   <plurals name="search_preview_user">
-    <item quantity="one">%d user</item>
-    <item quantity="other">%d users</item>
+    <item quantity="one">%d utilisateur</item>
+    <item quantity="other">%d utilisateurs</item>
   </plurals>
   <plurals name="search_preview_tags">
-    <item quantity="one">%d topic</item>
-    <item quantity="other">%d topics</item>
+    <item quantity="one">%d sujet</item>
+    <item quantity="other">%d sujets</item>
   </plurals>
-  <string name="nothing_to_see_here">There’s nothing here</string>
+  <string name="nothing_to_see_here">Il n\'y a rien ici</string>
   <!-- Search screen -->
-  <string name="accounts_title">Accounts</string>
+  <string name="accounts_title">Comptes</string>
   <string name="hashtags_title">Hashtags</string>
-  <string name="follow_hashtag">Follow \#%s</string>
-  <string name="following_hashtag">Following \#%s</string>
+  <string name="follow_hashtag">Suivre \#%s</string>
+  <string name="following_hashtag">Suis \#%s</string>
   <plurals name="participant_count">
     <item quantity="one">%d participant</item>
     <item quantity="other">%d participants</item>
   </plurals>
   <plurals name="posts_week">
-    <item quantity="one">%d post this week</item>
-    <item quantity="other">%d posts this week</item>
+    <item quantity="one">%d post cette semaine</item>
+    <item quantity="other">%d posts cette semaine</item>
   </plurals>
   <plurals name="posts_today">
-    <item quantity="one">%d post today</item>
-    <item quantity="other">%d posts today</item>
+    <item quantity="one">%d post aujourd’hui</item>
+    <item quantity="other">%d posts aujourd’hui</item>
   </plurals>
-  <string name="back_to_top">Back to top</string>
+  <string name="back_to_top">Aller en haut</string>
   <!--  Post screen-->
-  <string name="public_title">Public</string>
-  <string name="unlisted">Unlisted</string>
-  <string name="private_title">Private</string>
-  <string name="direct">Direct</string>
-  <string name="reply_placeholder">Anything you’d like to share?</string>
-  <string name="post_placeholder">Share your thoughts at the moment!</string>
-  <string name="change_post_visibility">Change Post visibility</string>
-  <string name="visibility_description">Change the visibility of your Post to make sure only the people you want can see your content.</string>
-  <string name="visibility_public">Public to everyone</string>
-  <string name="visibility_unlisted">Hide in public timeline</string>
+  <string name="public_title">Publique</string>
+  <string name="unlisted">Non listé</string>
+  <string name="private_title">Privé</string>
+  <string name="direct">Directe</string>
+  <string name="reply_placeholder">Quelque chose que vous aimeriez partager ?</string>
+  <string name="post_placeholder">Partagez vos pensées du moment !</string>
+  <string name="change_post_visibility">Modifier la visibilité du post</string>
+  <string name="visibility_description">Modifiez la visibilité de votre Post pour vous assurer que seules les personnes que vous voulez peuvent voir votre contenu.</string>
+  <string name="visibility_public">Public pour tout le monde</string>
+  <string name="visibility_unlisted">Cacher dans le fil public</string>
   <string name="visibility_private">Visible only to followers</string>
-  <string name="visibility_direct">Visible only to those mentioned</string>
-  <string name="attachments_exceeded">You cannot upload more than 4 media files</string>
-  <string name="single_choice">Single</string>
+  <string name="visibility_direct">Visible uniquement par ceux mentionnés</string>
+  <string name="attachments_exceeded">Vous ne pouvez pas téléverser plus de 4 médias</string>
+  <string name="single_choice">Unique</string>
   <string name="multiple_choice">Multiple</string>
   <string name="poll_option">Option %d</string>
-  <string name="add_poll_option">Add New Option</string>
+  <string name="add_poll_option">Ajouter une Nouvelle Option</string>
   <string name="poll_type">Type</string>
-  <string name="poll_deadlines">Setting deadlines</string>
-  <string name="duplicate_poll_option">duplicate option content</string>
+  <string name="poll_deadlines">Paramètre des échéances</string>
+  <string name="duplicate_poll_option">dupliquer le contenu de l’option</string>
   <string name="duration_5_min">5 minutes</string>
   <string name="duration_30_min">30 minutes</string>
-  <string name="duration_1_hour">1 hour</string>
-  <string name="duration_6_hours">6 hours</string>
-  <string name="duration_1_day">1 day</string>
-  <string name="duration_3_days">3 days</string>
-  <string name="duration_7_days">1 week</string>
-  <string name="poll_close_time">Voting will close in %s</string>
-  <string name="new_moment">New moment</string>
+  <string name="duration_1_hour">1 heure</string>
+  <string name="duration_6_hours">6 heures</string>
+  <string name="duration_1_day">1 jour</string>
+  <string name="duration_3_days">3 jours</string>
+  <string name="duration_7_days">1 semaine</string>
+  <string name="poll_close_time">Le vote se terminera dans %s</string>
+  <string name="new_moment">Nouveau moment</string>
   <string name="ok_title">OK</string>
   <!-- Notification screen -->
   <string name="notifications_title">Notifications</string>
-  <string name="someone_liked_your_post">%s liked your post</string>
-  <string name="someone_boosted_your_post">%s boosted your post</string>
-  <string name="someone_mentioned_you">%s mentioned you in a post</string>
-  <string name="someone_followed_you">%s is now following you</string>
-  <string name="someone_request_follow_you">%s has requested to follow you</string>
-  <string name="someone_share_new_post">%s shared a new post</string>
-  <string name="someone_update_post">%s has updated a post</string>
-  <string name="someone_poll_end">%s\'s poll has ended</string>
+  <string name="someone_liked_your_post">%s a aimé votre post</string>
+  <string name="someone_boosted_your_post">%s a boosté votre post</string>
+  <string name="someone_mentioned_you">%s vous a mentionné dans un post</string>
+  <string name="someone_followed_you">%s vous suit désormais</string>
+  <string name="someone_request_follow_you">%s a demandé à vous suivre</string>
+  <string name="someone_share_new_post">%s a partagé un nouveau post</string>
+  <string name="someone_update_post">%s a mis à jour un post</string>
+  <string name="someone_poll_end">Le sondage de %s est terminé</string>
+  <string name="notification_background_work_channel_name">Background Work</string>
+  <string name="notification_background_work_channel_description">Notifications for Mastify working in the background</string>
 </resources>
