--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -55,7 +55,7 @@
   <string name="mute_account">Masquer %s</string>
   <string name="block_account">Bloquer %s</string>
   <string name="report">Signaler</string>
-  <string name="many_posts_title">Plusieurs postes</string>
+  <string name="many_posts_title">Plusieurs posts</string>
   <plurals name="new_post">
     <item quantity="one">%d nouveau post</item>
     <item quantity="other">%d nouveaux postes</item>
@@ -63,6 +63,7 @@
   <string name="load_more_title">Afficher Plus</string>
   <string name="link_preview_title">Aperçu du Lien</string>
   <string name="replying_to_title">Répondre à %s</string>
+  <string name="unsupported_media_files">Unsupported media files</string>
   <!-- status detail screen -->
   <string name="post_your_reply">poster votre réponse</string>
   <string name="uncategorized_title">Sans catégorie</string>
